<resources>
    <string name="app_name">To Do</string>
    <string name="action_settings">Settings</string>
    <string name="colorBlack">Black</string>
    <string name="colorBlue">Blue</string>
    <string name="colorYellow">Yellow</string>
    <string name="colorRed">Red</string>
    <string name="colorGreen">Green</string>
    <string name="title">Title</string>
    <string name="to_do_details">Details</string>
    <string name="enter_to_do_details">Enter details</string>
    <string name="select_priority">Select Priority</string>
    <string name="enter_title">Enter title</string>
    <string name="save">Save</string>
    <string name="priority_color">Priority Color</string>
    <string name="set_time">Set time</string>
    <string name="set_date">Set date</string>
    <string name="noTodos">No ToDos Added. Use the + button to add one</string>
</resources>
