<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:layout_margin="@dimen/activity_vertical_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:text="@string/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:hint="@string/enter_title"
            android:ems="10"
            android:maxLines="2"
            android:ellipsize="end"
            android:id="@+id/edTitle" />

        <TextView
            android:text="@string/to_do_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textCapSentences"
            android:ems="10"
            android:hint="@string/enter_to_do_details"
            android:id="@+id/edDetails" />

        <TextView
            android:text="@string/select_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spPriority"
            />
        <TextView
            android:text="@string/set_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>
        <Button
            android:background="@color/colorAccent"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/btDate"
            />
        <TextView
            android:text="@string/set_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <Button
            android:background="@color/colorAccent"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/btTime"
            />

        <Button
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/btSave"
            android:text="@string/save"
            android:gravity="center"
            android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>